# p2p-file-storage

./: .gitignore  Cargo.toml  README.md  output.txt
client/: .gitignore  Cargo.toml  data.txt  file.txt  my_files.json  output.txt  secrets.json  stored_files.json
client/src/: bdkwallet.rs  main.rs
coordinator/: Cargo.toml  providers.json
coordinator/src/: main.rs
server/src/: main.rs
