[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tui = "0.19"
crossterm = "0.25"
local-ip-address = "0.5.1"
serde = "1.0.159"
serde_derive = "1.0.159"
serde_json = "1.0.95"
rand = "0.8.5"
sha256 = "1.1.3"
text_io = "0.1.12"
chacha20poly1305 = { version = "0.9.0", features = ["stream"] }
securestore = "0.100.0"